# django-remoteauth

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
remoteauth/: api.py  apps.py  manage.py  setup.py  tests.py  urls.py  views.py
remoteauth/apify/: apps.py  views.py
remoteauth/remote_auth/: api.py  require.py  tests.py  urls.py  views.py
remoteauth/remote_auth/templatetags/: user_in_role.py
remoteauth/remoteauth/: settings.py  urls.py  wsgi.py
